# vtk-rs

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPS.md  FEATURES.md  LICENSE.txt  Makefile  NOTES.md  README.md  TODO.md
crates/vtk/: Cargo.toml
crates/vtk-filters/: Cargo.toml
crates/vtk-filters/src/: adaptive_subdivide.rs  aggregate_dataset.rs  amr_connectivity.rs  amr_resample_filter.rs  amr_slice_filter.rs  amr_to_multi_block.rs  append.rs  array_math.rs  array_rename.rs  attribute_smooth.rs  auto_correlative_statistics.rs  banded_contour.rs  barycentric.rs  bounding_box_filter.rs  cell_size.rs  centroid_filter.rs  clip.rs  close_holes.rs  collision_detection.rs  compute_quartiles.rs  compute_tangents.rs  connectivity.rs  constrained_smooth.rs  contingency_statistics.rs  contour.rs  convert.rs  cookie_cutter.rs  correlative_statistics.rs  cross_section.rs  curvatures.rs  d3_decomposition.rs  decimate.rs  deep_copy.rs  delaunay_3d.rs  densify.rs  depth_peeling.rs  descriptive_statistics.rs  dicer.rs  edge_lengths.rs  elevation.rs  (+238 more)
crates/vtk-filters/src/image/: anisotropic_diffusion.rs  bilateral.rs  bilateral_3d.rs  binarize.rs  blend.rs  blend_3d.rs  canny_approx.rs  chamfer_distance.rs  channel_math.rs  clamp.rs  clamp_range.rs  colorize.rs  compose.rs  connected_components.rs  contour_to_poly.rs  convolve_separable.rs  crop.rs  crop_rotate.rs  cumulative.rs  curl.rs  difference_of_gaussians.rs  dilate_erode.rs  distance_transform_edt.rs  draw_primitives.rs  edge_detect.rs  entropy.rs  erode_binary.rs  erode_dilate_binary.rs  extract_slice.rs  feature_detect.rs  flip.rs  fourier.rs  gabor.rs  gradient.rs  gradient_analysis.rs  gradient_direction.rs  gradient_vector_field.rs  histogram_compute.rs  histogram_match.rs  histogram_stretch.rs  (+56 more)
crates/vtk-filters/src/mesh/: aabb_tree.rs  abstract_graph.rs  angle_defect.rs  arap_deform.rs  array_statistics.rs  aspect_ratio.rs  aspect_ratio_compute.rs  aspect_ratio_filter.rs  aspect_ratio_stats.rs  axis_projection.rs  barycentric_subdivide.rs  bbox_ops.rs  bilateral_smooth.rs  boolean_point_set.rs  boolean_robust.rs  border_distance.rs  boundary_analysis.rs  boundary_edges.rs  boundary_fill.rs  boundary_loop.rs  cage_deform.rs  cage_transform.rs  cell_connectivity_matrix.rs  circumradius.rs  circumscribed_sphere.rs  clip_by_plane.rs  closest_pair.rs  closest_point.rs  coarsen.rs  collapse_degenerate.rs  comparison.rs  compute_edge_lengths.rs  compute_face_areas.rs  compute_volume.rs  connected_face_groups.rs  connectivity_ops.rs  convex_decomposition.rs  convex_hull_3d.rs  convex_layers.rs  convexity_analysis.rs  (+166 more)
crates/vtk-filters/src/sources/: abacus.rs  airplane.rs  airport_runway.rs  amphitheater.rs  amphora.rs  anchor.rs  annulus.rs  antenna_tower.rs  anvil.rs  aqueduct.rs  arc.rs  arch.rs  arch_bridge.rs  armillary_sphere.rs  arrow.rs  arrow_2d.rs  arrow_3d.rs  arrow_curved.rs  arrow_source.rs  astrolabe.rs  atom_model.rs  axes.rs  bagpipe.rs  ballista.rs  barbell.rs  barn.rs  basketball_hoop.rs  battering_ram.rs  beam.rs  bellows.rs  bernal_sphere.rs  binoculars.rs  birdhouse.rs  bollard.rs  bone_structure.rs  book.rs  boomerang.rs  bounding_box_source.rs  box_with_lid.rs  boy_surface.rs  (+375 more)
crates/vtk-io-gdal/: Cargo.toml
crates/vtk-io-gdal/src/: lib.rs  raster.rs  vector.rs
crates/vtk-io-hdf5/: Cargo.toml
crates/vtk-io-hdf5/src/: amr.rs  cgns.rs  exodus.rs  lib.rs  minc.rs  netcdf_io.rs
crates/vtk-io-video/: Cargo.toml
crates/vtk-io-video/src/: ffmpeg_writer.rs  frame.rs  lib.rs  ppm_writer.rs
crates/vtk-parallel/: Cargo.toml
crates/vtk-parallel/src/: collective.rs  decomposition.rs  ghost_exchange.rs  lib.rs  mpi_backend.rs
crates/vtk-python/: Cargo.toml
crates/vtk-python/src/: lib.rs
crates/vtk-render-wgpu/: Cargo.toml
crates/vtk-render-wgpu/src/: bitmap_font.rs  bloom_pass.rs  clip_cap.rs  dof_pass.rs  gpu_picker.rs  lib.rs  mesh.rs  overlay.rs  overlay_shader.wgsl  shader.wgsl  shadow_pass.rs  silhouette_pass.rs  skybox_pass.rs  skybox_shader.wgsl  ssao_pass.rs  ssao_shader.wgsl  volume_pass.rs  volume_shader.wgsl  wgpu_renderer.rs  wireframe.rs
crates/vtk/src/: io_utils.rs  lib.rs
crates/vtk/src/data/: attributes.rs  cell_array.rs  cell_grid.rs  field_data.rs  hyper_tree_grid.rs  image_data.rs  kd_tree.rs  mod.rs  obb_tree.rs  octree.rs  points.rs  poly_data.rs  poly_data_builder.rs  reeb_graph.rs  spatial_hash.rs  streaming.rs  structured_grid.rs  table.rs
crates/vtk/src/filters/boolean/: boolean.rs  cookie_cutter.rs  poly_data_boolean_2d.rs
crates/vtk/src/filters/cell/: boundary_quality.rs  cell_centers.rs  cell_data_to_point_data_avg.rs  collapse_edges.rs  data_set_triangulate.rs  mod.rs  poly_line_to_strip.rs  separate_cells.rs
crates/vtk/src/filters/clip/: banded_contour.rs  clip.rs  clip_by_scalar.rs  clip_closed_surface.rs  clip_data_set.rs  clip_volume.rs  iso_volume.rs  multi_threshold.rs  threshold.rs
crates/vtk/src/filters/core/: aggregate_dataset.rs  convert.rs  decimate.rs  extract_block.rs  extract_geometry.rs  extract_largest.rs  marching_cubes.rs  mass_properties.rs  mod.rs  quick.rs  selection_extract.rs  slice.rs  vector_field_operations.rs
crates/vtk/src/filters/distance/: collision_detection.rs  distance_poly_data.rs  hausdorff.rs  mod.rs  signed_distance_field_par.rs  winding_number.rs
crates/vtk/src/filters/extract/: extract_cells.rs  extract_data_over_time.rs  extract_edges.rs  extract_enclosed_points.rs  extract_hierarchical_bins.rs  extract_points.rs  extract_surface.rs  (+5 more)
crates/vtk/src/io/: mod.rs
crates/vtk/src/parallel/: decomposition.rs  mod.rs  mpi_backend.rs
crates/vtk/src/render/: animation.rs  annotation.rs  fog.rs  impostor.rs  measurement.rs  mod.rs  parallel_render.rs  path_tracer.rs  ray_tracer.rs  scalar_bar.rs  scene_json.rs  skybox.rs  stereo.rs  web_viewer.rs
crates/vtk/src/render_wgpu/: bitmap_font.rs  bloom_pass.rs  clip_cap.rs  gpu_picker.rs  pick_shader.wgsl  shadow_pass.rs  shadow_shader.wgsl  silhouette_pass.rs  skybox_pass.rs  volume_pass.rs  wireframe.rs
crates/vtk/src/types/: bounds.rs  error.rs  mod.rs  ode.rs  scalar.rs
(+8697 files in other folders)
