[workspace]
members = [
    "crates/vtk",
    "crates/vtk-python",
]
resolver = "2"

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rayon = "1.10"
proptest = "1"
thiserror = "2"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
wgpu = "24"
winit = "0.30"
pollster = "0.4"

[package]
name = "vtk-rs-examples"
version = "0.1.0"
edition = "2021"
publish = false
autobenches = false

[dependencies]
vtk = { path = "crates/vtk" }
winit = { workspace = true }
pollster = { workspace = true }

[[example]]
name = "triangle"
path = "examples/triangle.rs"

[[example]]
name = "shapes"
path = "examples/shapes.rs"

[[example]]
name = "isosurface"
path = "examples/isosurface.rs"

[[example]]
name = "scalar_colors"
path = "examples/scalar_colors.rs"

[[example]]
name = "pipeline_demo"
path = "examples/pipeline_demo.rs"

[[example]]
name = "showcase"
path = "examples/showcase.rs"

[[example]]
name = "volume"
path = "examples/volume.rs"

[[example]]
name = "mesh_info"
path = "examples/mesh_info.rs"

[[example]]
name = "headless_render"
path = "examples/headless_render.rs"

[[example]]
name = "bench_filters"
path = "benches/filters.rs"
