[package]
name = "vtk-filters"
version = "0.1.0"
edition = "2021"

[dependencies]
vtk-types = { workspace = true }
vtk-data = { workspace = true }
rayon = { workspace = true }
vtk-io-legacy = { workspace = true }
vtk-io-stl = { workspace = true }
vtk-io-obj = { workspace = true }
vtk-io-xml = { workspace = true }
vtk-io-ply = { workspace = true }
vtk-io-gltf = { workspace = true }
vtk-io-off = { workspace = true }
