[package]
name = "vtk-filters"
version = "0.1.0"
edition = "2021"

[dependencies]
vtk-types = { workspace = true }
vtk-data = { workspace = true }
rayon = { workspace = true }
vtk-io-legacy = { workspace = true }
vtk-io-stl = { workspace = true }
vtk-io-obj = { workspace = true }
vtk-io-xml = { workspace = true }
vtk-io-ply = { workspace = true }
vtk-io-gltf = { workspace = true }
vtk-io-off = { workspace = true }
vtk-filters-image = { workspace = true }
vtk-filters-mesh = { workspace = true }
vtk-filters-extract = { workspace = true }
vtk-filters-transform = { workspace = true }
vtk-filters-subdivide = { workspace = true }
vtk-filters-clip = { workspace = true }
vtk-filters-smooth = { workspace = true }
vtk-filters-cell = { workspace = true }
vtk-filters-points = { workspace = true }
vtk-filters-statistics = { workspace = true }
vtk-filters-texture = { workspace = true }
vtk-filters-flow = { workspace = true }
vtk-filters-boolean = { workspace = true }
vtk-filters-grid = { workspace = true }
vtk-filters-data = { workspace = true }
vtk-filters-distance = { workspace = true }
vtk-filters-normals = { workspace = true }
vtk-filters-geometry = { workspace = true }
