[package]
name = "vtk-filters"
version = "0.1.0"
edition = "2021"

[features]
default = []
image = ["dep:vtk-filters-image"]
mesh = ["dep:vtk-filters-mesh"]
smooth = ["dep:vtk-filters-smooth"]
transform = ["dep:vtk-filters-transform"]
subdivide = ["dep:vtk-filters-subdivide"]
cell = ["dep:vtk-filters-cell"]
statistics = ["dep:vtk-filters-statistics"]
texture = ["dep:vtk-filters-texture"]
flow = ["dep:vtk-filters-flow"]
boolean = ["dep:vtk-filters-boolean"]
grid = ["dep:vtk-filters-grid"]
data = ["dep:vtk-filters-data"]
distance = ["dep:vtk-filters-distance"]
all = ["image", "mesh", "smooth", "transform", "subdivide", "cell",
       "statistics", "texture", "flow", "boolean", "grid", "data", "distance"]

[dependencies]
vtk-types = { workspace = true }
vtk-data = { workspace = true }
rayon = { workspace = true }

# Always required (used internally by pipeline, generic_filters, quick)
vtk-filters-normals = { workspace = true }
vtk-filters-geometry = { workspace = true }
vtk-filters-extract = { workspace = true }
vtk-filters-clip = { workspace = true }
vtk-filters-points = { workspace = true }

# Optional sub-crates (pure re-exports)
vtk-filters-image = { workspace = true, optional = true }
vtk-filters-mesh = { workspace = true, optional = true }
vtk-filters-smooth = { workspace = true, optional = true }
vtk-filters-transform = { workspace = true, optional = true }
vtk-filters-subdivide = { workspace = true, optional = true }
vtk-filters-cell = { workspace = true, optional = true }
vtk-filters-statistics = { workspace = true, optional = true }
vtk-filters-texture = { workspace = true, optional = true }
vtk-filters-flow = { workspace = true, optional = true }
vtk-filters-boolean = { workspace = true, optional = true }
vtk-filters-grid = { workspace = true, optional = true }
vtk-filters-data = { workspace = true, optional = true }
vtk-filters-distance = { workspace = true, optional = true }
