[package]
name = "vtk-io-video"
version = "0.1.0"
edition = "2021"
description = "Video I/O for vtk-rs — write image sequences as video files via ffmpeg"

[features]
default = []
ffmpeg = ["dep:ffmpeg-next"]

[dependencies]
vtk-types = { path = "../vtk-types" }
vtk-data = { path = "../vtk-data" }
ffmpeg-next = { version = "7", optional = true }
