[package]
name = "vtk-parallel"
version = "0.1.0"
edition = "2021"
description = "MPI-based distributed parallel computing for vtk-rs"

[features]
default = []
mpi = ["dep:mpi"]

[dependencies]
vtk-types = { path = "../vtk-types" }
vtk-data = { path = "../vtk-data" }
mpi = { version = "0.8", optional = true }
